<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/sorting_fragment_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/sorting_by_date"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/sorting_by_rating"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/sorting_by_popularity"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_price_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/sorting_by_price_up"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_price_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/sorting_by_price_down"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>
</layout>
